[package]
name = "succinct_trees_fb"
version = "0.1.0"
authors = ["bzmmarvin222"]

[dependencies]
failure = "0.1.1"
bincode = "1.0.0"
itertools = "0.7.8"
id_tree = "1.3.0"
serde = "1.0.59"
serde_json = "1.0.17"
serde_derive = "1.0.59"
bv = { version = "0.7", features = ["serde"]}
bio = "0.20.3"
rand = "0.5.4"
